fix overflow x bug

--- a/sass/global/_base.scss
+++ b/sass/global/_base.scss
@@ -9,6 +9,7 @@
 html {
   font-size: $font-size;
   font-family: $font-family;
+  overflow-x: hidden;
 }
 
 body {
